Fix validation issues and improve local testing
- Fix escalate node AttributeError when accessing validate data
  - Handle validate data as list (array of validation attempts)
  - Access most recent validation using validate_data[-1]

- Update validation endpoint to use MCP configuration
  - Construct endpoint from MCP_BASE_URL + /talent-success/melvin-validation/validate
  - Use MCP_AUTH_TOKEN instead of separate VALIDATION_API_KEY
  - Change from x-api-key to Bearer token authentication

- Add dry run support for procedure logging
  - Skip API logging when DRY_RUN mode is enabled

- Improve local testing workflow
  - Add run_local Makefile target
  - Update README with local testing instructions
  - Add local_runs/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,9 @@ test_results/
 comprehensive_test_results_*.json
 single_test_result_*.json
 
+# Local test runs
+local_runs/
+
 # Temporary files
 *.tmp
 *.temp
